[package]
name = "allez_ropi_romi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.31.0"
log = "0.4.14"
nalgebra = "0.26"
rand = "0.8.4"
rand_pcg = "0.3.1"
tracing = "0.1.26"
tracing-subscriber = "0.2.25"
